@@ -1,3 +1,8 @@
+2011-05-16  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-util.lisp (ask-close/kill-current-window): Add an
+	*ask-close/kill-placement* placement window variable.
+
 2011-05-09  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* contrib/osd.lisp (funcall-button-from-code): Display osd
